# rust_hello_openg

./: Cargo.toml  readme.md
infrastructure_opengl/: Cargo.toml
infrastructure_opengl/src/: camera.rs  lib.rs  shaders.rs  transform.rs  utils.rs  vao.rs  vbo.rs
lib/mygl/: Cargo.toml
model_scene/: Cargo.toml
model_scene/src/: camera.rs  id_controller.rs  identity.rs  lib.rs  light.rs  object.rs  render.rs  transform.rs  utils.rs  world.rs  world_node.rs
src/: camera.rs  main.rs  main_loop.rs  mesh.rs  program.rs  scene_object.rs  sdl_utils.rs  shader.rs  shader_utils.rs  shaders.rs  transform.rs  triangle.frag  triangle.vert  vao.rs  world.rs  world_node.rs
