[package]
name = "model_scene"
version = "0.1.0"
authors = ["luciano <luciano.geronimo.fnord@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
infrastructure_opengl = {path = "../infrastructure_opengl"}
cgmath = "0.17.0"
uuid = { version = "0.8", features = ["serde", "v4"] }

[dependencies.gl]
version = "0.14.0"